default/objects/Stakeholders__c/Stakeholders__c.object-meta.xml
<CustomObject>
    <label>Stakeholder</label>
    <nameField>
        <label>Stakeholders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>