default/objects/Stakeholders__c/fields/BuildingStar__c.field-meta.xml
<CustomField>
    <fullName>BuildingStar__c</fullName>
    <label>Building Star</label>
    <length>20</length>
    <type>Text</type>
</CustomField>