default/objects/Stakeholders__c/fields/CancelationDate__c.field-meta.xml
<CustomField>
    <fullName>CancelationDate__c</fullName>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>