default/objects/Stakeholders__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Third_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>