default/objects/Stakeholders__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policyholder</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>