default/objects/Stakeholders__c/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <formula>Address__Street__s &amp; &quot; &quot; &amp;  Address__PostalCode__s &amp; &quot; &quot; &amp;  Address__City__s &amp; &quot; &quot; &amp;  TEXT(Address__StateCode__s) &amp; &quot; &quot; &amp;  TEXT(Address__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>