default/objects/Stakeholders__c/fields/IdentifierType__c.field-meta.xml
<CustomField>
    <fullName>IdentifierType__c</fullName>
    <label>Identifier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIF</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>NIE</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
                <label>Pasaporte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>