default/objects/Stakeholders__c/fields/InsuranceCompanyDescription__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyDescription__c</fullName>
    <label>Insurance Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>