default/objects/Stakeholders__c/fields/InsuranceCompanyIdentifier__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCompanyIdentifier__c</fullName>
    <label>Insurance Company Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C0001</fullName>
                <label>ABANCA GENERALES DE SEG,Y REASEGUROS,S.A - ABANCA GENERALES DE SEG,Y REASEGUROS,S.A</label>
            </value>
            <value>
                <fullName>C0002</fullName>
                <label>ABANCA GENERALES DE SEGUROS Y REASEGUROS, S.A.</label>
            </value>
            <value>
                <fullName>C0003</fullName>
                <label>ABEILLE PREVISORA RI</label>
            </value>
            <value>
                <fullName>C0004</fullName>
                <label>ACE EUROPE</label>
            </value>
            <value>
                <fullName>C0005</fullName>
                <label>ACE EUROPEAN GROUP LIMITED - ACE EUROPEAN GROUP LIMITED</label>
            </value>
            <value>
                <fullName>C0006</fullName>
                <label>ACHMEA SCHADEVERZEKERINGEN N.V.</label>
            </value>
            <value>
                <fullName>C0007</fullName>
                <label>ACM SEGUROS</label>
            </value>
            <value>
                <fullName>C0008</fullName>
                <label>ADMIRAL EUROPE COMPAÑIA DE SEGUROS, S.A.U.</label>
            </value>
            <value>
                <fullName>C0009</fullName>
                <label>ADMIRAL INSURANCE COMPANY SUC. EN ESPAÑA - BALUMBA (ADMIRAL INSURANCE COMPANY)</label>
            </value>
            <value>
                <fullName>C0010</fullName>
                <label>ADMIRAL INSURANCE COMPANY SUC. EN ESPAÑA - QUALITAS AUTOS</label>
            </value>
            <value>
                <fullName>C0011</fullName>
                <label>AEGON SANTANDER GENER SEG Y REASEG, S.A. - AEGON</label>
            </value>
            <value>
                <fullName>C0012</fullName>
                <label>AEGON SEGUROS GENERALES S.A. DE SEGUROS Y REASEGUROS</label>
            </value>
            <value>
                <fullName>C0013</fullName>
                <label>AEGON UNION ASEGURADORA</label>
            </value>
            <value>
                <fullName>C0014</fullName>
                <label>AGF / UNION FENIX</label>
            </value>
            <value>
                <fullName>C0015</fullName>
                <label>AGF / UNION FENIX SE</label>
            </value>
            <value>
                <fullName>C0016</fullName>
                <label>AGRUPACION MUTUAL ASEGURADORA (A.M.A) - A.M.A.  AGRUPACION MUTUAL ASEGURADORA</label>
            </value>
            <value>
                <fullName>C0017</fullName>
                <label>AIDE ASISTENCIA SEGU</label>
            </value>
            <value>
                <fullName>C0018</fullName>
                <label>AIDE ASISTENCIA, S.A. - AIDE ASISTENCIA, S.A.</label>
            </value>
            <value>
                <fullName>C0019</fullName>
                <label>AIG EUROPE LIMITED</label>
            </value>
            <value>
                <fullName>C0020</fullName>
                <label>AIG EUROPE S.A.</label>
            </value>
            <value>
                <fullName>C0021</fullName>
                <label>AIOI NISSAY DOWA INSURANCE (TOYOTA)</label>
            </value>
            <value>
                <fullName>C0022</fullName>
                <label>ALBA  COMPANIA GENER</label>
            </value>
            <value>
                <fullName>C0023</fullName>
                <label>ALIANZA ESPANOLA  S.</label>
            </value>
            <value>
                <fullName>C0024</fullName>
                <label>ALIANZA MEDICA, S.A. CIA. DE SEGUROS - DIVINA PASTORA SEGUROS</label>
            </value>
            <value>
                <fullName>C0025</fullName>
                <label>ALLIANZ - ALLIANZ</label>
            </value>
            <value>
                <fullName>C0026</fullName>
                <label>ALLIANZ DIRECT</label>
            </value>
            <value>
                <fullName>C0027</fullName>
                <label>ALLIANZ DIRECT VERSICHERUNGS - ALLIANZ DIRECT VERSICHERUNGS</label>
            </value>
            <value>
                <fullName>C0028</fullName>
                <label>ALLIANZ INDUSTRIAL C</label>
            </value>
            <value>
                <fullName>C0029</fullName>
                <label>ALLIANZ,  COMPAÑIA DE SEGUROS Y REASEGUROS</label>
            </value>
            <value>
                <fullName>C0030</fullName>
                <label>ALMUDENA COMPAÑÍA DE SEGUROS Y REASEGUROS, S.A.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>