default/objects/Stakeholders__c/fields/IsLiableCompany__c.field-meta.xml
<CustomField>
    <fullName>IsLiableCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Liable Company</label>
    <type>Checkbox</type>
</CustomField>