default/objects/Stakeholders__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <label>Letter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>