default/objects/Stakeholders__c/fields/MKISId__c.field-meta.xml
<CustomField>
    <fullName>MKISId__c</fullName>
    <externalId>true</externalId>
    <label>MKIS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>