default/objects/Stakeholders__c/fields/OnthePortal__c.field-meta.xml
<CustomField>
    <fullName>OnthePortal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On the Portal</label>
    <type>Checkbox</type>
</CustomField>