default/objects/Stakeholders__c/fields/OpposingInsuranceClaimReference__c.field-meta.xml
<CustomField>
    <fullName>OpposingInsuranceClaimReference__c</fullName>
    <label>Opposing Insurance Claim Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>