default/objects/Stakeholders__c/fields/PhoneContactEndTime__c.field-meta.xml
<CustomField>
    <fullName>PhoneContactEndTime__c</fullName>
    <label>Phone Contact End Time</label>
    <type>Time</type>
</CustomField>