default/objects/Stakeholders__c/fields/PhoneContactStartTime__c.field-meta.xml
<CustomField>
    <fullName>PhoneContactStartTime__c</fullName>
    <label>Phone Contact Start Time</label>
    <type>Time</type>
</CustomField>