default/objects/Stakeholders__c/fields/PolicyholderNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyholderNumber__c</fullName>
    <label>Policyholder Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>