default/objects/Stakeholders__c/fields/PrimaryMobile__c.field-meta.xml
<CustomField>
    <fullName>PrimaryMobile__c</fullName>
    <label>Primary Mobile</label>
    <type>Phone</type>
</CustomField>