default/objects/Stakeholders__c/fields/PrimaryMobileContactEndTime__c.field-meta.xml
<CustomField>
    <fullName>PrimaryMobileContactEndTime__c</fullName>
    <label>Primary Mobile Contact End Time</label>
    <type>Time</type>
</CustomField>