default/objects/Stakeholders__c/fields/PrimaryMobileContactStartTime__c.field-meta.xml
<CustomField>
    <fullName>PrimaryMobileContactStartTime__c</fullName>
    <label>Primary Mobile Contact Start Time</label>
    <type>Time</type>
</CustomField>