default/objects/Stakeholders__c/fields/SecondaryMobile__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMobile__c</fullName>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>