default/objects/Stakeholders__c/fields/SecondaryMobileContactEndTime__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMobileContactEndTime__c</fullName>
    <label>Secondary Mobile Contact End Time</label>
    <type>Time</type>
</CustomField>