default/objects/Stakeholders__c/fields/SecondaryMobileContactStartTime__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMobileContactStartTime__c</fullName>
    <label>Secondary Mobile Contact Start Time</label>
    <type>Time</type>
</CustomField>