default/objects/Stakeholders__c/fields/StakeholderTaxID__c.field-meta.xml
<CustomField>
    <fullName>StakeholderTaxID__c</fullName>
    <label>Stakeholder Tax ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>