default/objects/Stakeholders__c/fields/StakeholderType__c.field-meta.xml
<CustomField>
    <fullName>StakeholderType__c</fullName>
    <label>Stakeholder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Causante</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Prejudicado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>