default/objects/Stakeholders__c/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <label>Street Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>