default/objects/Stakeholders__c/fields/StreetType__c.field-meta.xml
<CustomField>
    <fullName>StreetType__c</fullName>
    <label>Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG</fullName>
                <label>GROUPING</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>VILLAGE</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>AVENUE</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>APARTMENTS</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>STREAM</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>HIGHWAY</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>MAIN STREET</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>RAVINE</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>DESCENT</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>BLOCK</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>NEIGHBORHOOD</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>VILLA</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>ALLEY</label>
            </value>
            <value>
                <fullName>CM</fullName>
                <label>ROAD</label>
            </value>
            <value>
                <fullName>CÑ</fullName>
                <label>GLEN</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>COLONY</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>MOTORWAY</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>HOUSE</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>HILL</label>
            </value>
            <value>
                <fullName>ED</fullName>
                <label>BUILDING</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>CORNER</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>GROUP</label>
            </value>
            <value>
                <fullName>GT</fullName>
                <label>ROUNDABOUT</label>
            </value>
            <value>
                <fullName>GV</fullName>
                <label>GRAN VIA</label>
            </value>
            <value>
                <fullName>LG</fullName>
                <label>PLACE</label>
            </value>
            <value>
                <fullName>MC</fullName>
                <label>MARKET</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>MUNICIPALITY</label>
            </value>
            <value>
                <fullName>PB</fullName>
                <label>TOWN</label>
            </value>
            <value>
                <fullName>PD</fullName>
                <label>PARTIDA</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>PASSAGE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>