default/objects/Stakeholders__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>